# dc2021f-ooows-public

./: .gitignore  .gitmodules  Makefile  README.md  apic.c  deploy-check.py  devicebus.c  devices.config  test-net-dev.py  test-noflag-dev.py  test-ogx-dev.py  test-p9-dev.py  vmm.c
bios/: bios.asm  boot_image
boot/: Makefile  disk_creator.py  linker.ld
boot/i686/: runme.sh
boot/kernel/: asm_routines.asm  bootloader.S  interrupts.h  kernel.c  kernel_entry.asm  kprint.h  malloc.c  malloc.h  noflag.c  p9.c  p9.h  virtio_drv.c  virtio_drv.h  virtio_queue.h
devices/: example-device.cpp  example-device.hpp  noflag.c  ooows-net.cpp  ooows-net.hpp  ooows-p9fs.cpp  ooows-p9fs.hpp  ooows-vga.c  ooows-vga.h
devices-bin/: net-firmware  noflag.sh  ogx  ooowsdisk.py  ooowsserial-debug.py  ooowsserial.py  p9fs
devices-bin/pyutils/: memorymanager.py
devices/broadcooom/: README.md  assembler.py  grammar.lark  microcode-enginetest.c  microengine.cpp  microengine.hpp  myqueue.hpp  names.c  phy.cpp  phy.hpp  types.hpp
devices/broadcooom/examples/: alu.uc  engine.uc  immed.uc  memory.uc  shellcode.uc  stage_0.uc  test.uc
devices/ogx/: CMakeLists.txt  Device.cpp  Device.h  Driver.cpp  Driver.h  Enclave.cpp  Enclave.h  Event.cpp  Event.h  ThreadPool.cpp  ThreadPool.h  ogx.cpp  ogx.h  ogx.pub  ogx.sec  ogx_enclave_flag.asm  ogx_enclave_read.asm  ogx_enclave_signal.asm  ogx_exploit.cpp  ogx_keys.cpp  ogx_test.cpp  ogx_test_device.cpp  pku.h  sanitize_ignorelist  trampoline.asm
devices/p9fs/: README.md  p9core.cpp  p9core.hpp  qidobject.cpp  qidobject.hpp  rresponses.cpp  rresponses.hpp  trace.h  trequests.cpp  trequests.hpp
devices/utils/: coms.c  coms.h  handshake.c  handshake.h  mem-manager.cpp  mem-manager.hpp  per-vm.c  per-vm.h  threadpool.c  threadpool.h  virtio.cpp  virtio.hpp
hyper-o/: Makefile  asm_functions.S  log.c  main.c  mmio_man.c  mmio_man.h  user-test.c  vmx.c
hyper-o/inc/: asm.h  ioooctls.h  main.h  memory.h  vmcs.h  vmcs_encoding.h  vmexit.h  vmx_controls.h
hyper-o/inc/arch/: cpuid.h  dr.h  exec_controls.h  msr.h  rflags.h  segment.h
hyper-o/inc/asm/: asm_functions.h
hyper-o/inc/utils/: log.h
hyper-o/stubs/: hypero_stubs.c
inc/: apic.h  devicebus.h  iostructs.h  vmm.h
kvm/: kvmstubs.c
linux/: build.sh  launch.sh
linux/fs/: init
web/: app.py  console.py  schema.sql  vmm.py
web-p9/: app.py  init-db.py  requirements.txt  video.py  vmm.py
web-p9/templates/: console.html  files.html  index.html  view.html
web/templates/: console.html  index.html  layout.html  view.html
